- ALSA: hda - switch lfe with side in mixer for 4930g   (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -598,6 +598,7 @@
 	patches.drivers/alsa-hda-0007-Apply-Sony-VAIO-hweq-fixup-only-once
 	patches.drivers/alsa-hda-0008-Add-SKU-ignore-for-another-Thinkpad-Edge-14
 	patches.drivers/alsa-hda-0009-Fix-automute-on-Thinkpad-L412-L512
+	patches.drivers/alsa-hda-0010-switch-lfe-with-side-in-mixer-for-4930g
 
 	########################################################
 	# Other driver fixes
