--- a/series.conf
+++ b/series.conf
@@ -599,6 +599,7 @@
 	patches.drivers/alsa-hda-0008-Add-SKU-ignore-for-another-Thinkpad-Edge-14
 	patches.drivers/alsa-hda-0009-Fix-automute-on-Thinkpad-L412-L512
 	patches.drivers/alsa-hda-0010-switch-lfe-with-side-in-mixer-for-4930g
+	patches.drivers/alsa-hda-0011-Fix-unable-to-record-issue-on-ASUS-N82JV
 
 	########################################################
 	# Other driver fixes
