- ALSA: HDA: Fixup unnecessary volume control index on Realtek   ALC88x (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -604,6 +604,7 @@
 	patches.drivers/alsa-hda-0013-Add-support-for-multiple-headphone-speaker-controls
 	patches.drivers/alsa-hda-0014-Enable-surround-and-subwoofer-on-Lenovo-IdeaPad
 	patches.drivers/alsa-hda-0015-Fix-volume-control-naming-for-surround-speakers
+	patches.drivers/alsa-hda-0016-Fixup-unnecessary-volume-control-index-on-Realtek
 
 	########################################################
 	# Other driver fixes
