- ALSA: HDA: Enable surround and subwoofer on Lenovo Ideapad Y530   (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -602,6 +602,7 @@
 	patches.drivers/alsa-hda-0011-Fix-unable-to-record-issue-on-ASUS-N82JV
 	patches.drivers/alsa-hda-0012-4930g-add-internal-lfe-slider
 	patches.drivers/alsa-hda-0013-Add-support-for-multiple-headphone-speaker-controls
+	patches.drivers/alsa-hda-0014-Enable-surround-and-subwoofer-on-Lenovo-IdeaPad
 
 	########################################################
 	# Other driver fixes
