- ALSA: HDA: Fix automute on Thinkpad L412/L512 (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -597,6 +597,7 @@
 	patches.drivers/alsa-hda-0006-Fix-ALC275-enable-hardware-EQ-for-SONY-VAIO
 	patches.drivers/alsa-hda-0007-Apply-Sony-VAIO-hweq-fixup-only-once
 	patches.drivers/alsa-hda-0008-Add-SKU-ignore-for-another-Thinkpad-Edge-14
+	patches.drivers/alsa-hda-0009-Fix-automute-on-Thinkpad-L412-L512
 
 	########################################################
 	# Other driver fixes
