- ALSA: HDA: Realtek ALC88x: Do not over-initialize speakers   and hp that are primary outputs (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -605,6 +605,7 @@
 	patches.drivers/alsa-hda-0014-Enable-surround-and-subwoofer-on-Lenovo-IdeaPad
 	patches.drivers/alsa-hda-0015-Fix-volume-control-naming-for-surround-speakers
 	patches.drivers/alsa-hda-0016-Fixup-unnecessary-volume-control-index-on-Realtek
+	patches.drivers/alsa-hda-0017-Realtek-ALC88x-Do-not-over-initialize-speakers
 
 	########################################################
 	# Other driver fixes
