- ALSA: hda - Add support for multiple headphone/speaker controls   for Realtek (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -601,6 +601,7 @@
 	patches.drivers/alsa-hda-0010-switch-lfe-with-side-in-mixer-for-4930g
 	patches.drivers/alsa-hda-0011-Fix-unable-to-record-issue-on-ASUS-N82JV
 	patches.drivers/alsa-hda-0012-4930g-add-internal-lfe-slider
+	patches.drivers/alsa-hda-0013-Add-support-for-multiple-headphone-speaker-controls
 
 	########################################################
 	# Other driver fixes
