- ALSA: HDA: Add SKU ignore for another Thinkpad Edge 14   (bnc#679016).

--- a/series.conf
+++ b/series.conf
@@ -596,6 +596,7 @@
 	patches.drivers/alsa-hda-0005-Fix-EAPD-on-Lenovo-NB-ALC269-to-low
 	patches.drivers/alsa-hda-0006-Fix-ALC275-enable-hardware-EQ-for-SONY-VAIO
 	patches.drivers/alsa-hda-0007-Apply-Sony-VAIO-hweq-fixup-only-once
+	patches.drivers/alsa-hda-0008-Add-SKU-ignore-for-another-Thinkpad-Edge-14
 
 	########################################################
 	# Other driver fixes
