--- a/series.conf
+++ b/series.conf
@@ -595,6 +595,7 @@
 	patches.drivers/alsa-hda-0005-Add-a-generic-fixup-callback-for-Realtek-codecs
 	patches.drivers/alsa-hda-0005-Fix-EAPD-on-Lenovo-NB-ALC269-to-low
 	patches.drivers/alsa-hda-0006-Fix-ALC275-enable-hardware-EQ-for-SONY-VAIO
+	patches.drivers/alsa-hda-0007-Apply-Sony-VAIO-hweq-fixup-only-once
 
 	########################################################
 	# Other driver fixes
