--- a/series.conf
+++ b/series.conf
@@ -594,6 +594,7 @@
 	patches.drivers/alsa-hda-0004-Fix-missing-EAPD-for-Acer-4930G
 	patches.drivers/alsa-hda-0005-Add-a-generic-fixup-callback-for-Realtek-codecs
 	patches.drivers/alsa-hda-0005-Fix-EAPD-on-Lenovo-NB-ALC269-to-low
+	patches.drivers/alsa-hda-0006-Fix-ALC275-enable-hardware-EQ-for-SONY-VAIO
 
 	########################################################
 	# Other driver fixes
