--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.37.1
 	patches.kernel.org/patch-2.6.37.1-2
 	patches.kernel.org/patch-2.6.37.2-3
+	patches.kernel.org/patch-2.6.37.3-4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -513,7 +514,6 @@
 	########################################################
 	patches.fixes/flexcop-fix-registering-braindead-stupid-names
 	patches.fixes/media-Mantis-hopper-use-MODULE_DEVICE_TABLE.patch
-	patches.fixes/media-DiB7000M-add-pid-filtering.patch
 
 	########################################################
 	# Network
@@ -544,7 +544,6 @@
 	patches.suse/b43-missing-firmware-info.patch
 	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 	patches.fixes/orinoco-allow-IW_AUTH_MFP-to-pass-through.patch
-	patches.fixes/ath9k-Fix-ath9k-prevents-CPU-to-enter-C3-states.patch
 	patches.drivers/iwl-cleanup-iwl_good_ack_health.patch
 	patches.drivers/iwl-fix-ack-health-for-WiFi-BT-combo-devices.patch
 
