- nfs: Convert nfs_mark_request_dirty() to use page_file_mapping()   (bnc#677738).

--- a/series.conf
+++ b/series.conf
@@ -424,6 +424,7 @@
 	patches.suse/SoN-23-mm-swapfile.patch
 	patches.suse/SoN-24-mm-page_file_methods.patch
 	patches.suse/SoN-25-nfs-swapcache.patch
+	patches.suse/SoN-25a-nfs-swapcache.patch
 	patches.suse/SoN-26-nfs-swapper.patch
 	patches.suse/SoN-27-nfs-swap_ops.patch
 	patches.suse/SoN-28-nfs-alloc-recursions.patch
