--- a/series.conf
+++ b/series.conf
@@ -792,9 +792,7 @@
 	patches.xen/xen3-patch-2.6.35
 	patches.xen/xen3-patch-2.6.36
 	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38-rc4
-	patches.xen/xen3-patch-2.6.38-rc4-rc5
-	patches.xen/xen3-patch-2.6.38-rc6-rc7
+	patches.xen/xen3-patch-2.6.38
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
