- SPI: dw_spi, fix PPC build.

--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 	patches.rpmify/qla4xx-missing-readq-definition
 	patches.rpmify/winbond-needs-msleep
+	patches.rpmify/dw_spi-fix-PPC-build.patch
 
         ########################################################
         # kABI consistency patches
