--- a/series.conf
+++ b/series.conf
@@ -546,6 +546,7 @@
 	########################################################
 	# USB
 	########################################################
+	patches.fixes/cdc-phonet-handle-empty-phonet-header.patch
 
 	########################################################
 	# I2C
