--- a/series.conf
+++ b/series.conf
@@ -564,6 +564,7 @@
 	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
+	patches.fixes/hid-add-support-for-Skycable-0x3f07-wireless-present.patch
 
 	##########################################################
 	# Sound
