- Fix almost-infinite slab cache growing (bnc#554081).

--- a/series.conf
+++ b/series.conf
@@ -439,6 +439,7 @@
    # don't want to rediff SoN until this gets more testing 
 	patches.suse/slab-handle-memoryless-nodes-v2a.patch
 	patches.suse/SoN-fix
+	patches.suse/SoN-33-slab-leak-fix.patch
 
 	########################################################
 	# Netfilter
