--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-2.6.38.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -36,7 +37,6 @@
 	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 	patches.rpmify/qla4xx-missing-readq-definition
-	patches.rpmify/winbond-needs-msleep
 	patches.rpmify/dw_spi-fix-PPC-build.patch
 
         ########################################################
