- sound/oss/opl3: validate voice and channel indexes (bnc#681999).

--- a/series.conf
+++ b/series.conf
@@ -572,6 +572,7 @@
 	##########################################################
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
 	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
+	patches.drivers/sound-oss-opl3-validate-voice-and-channel-indexes
 
 	########################################################
 	# Other driver fixes
