- sound/oss: remove offset from load_patch callbacks (bnc#681999).

--- a/series.conf
+++ b/series.conf
@@ -571,6 +571,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
+	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
 
 	########################################################
 	# Other driver fixes
