--- a/series.conf
+++ b/series.conf
@@ -571,6 +571,8 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889
+
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
 	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
 	patches.drivers/sound-oss-opl3-validate-voice-and-channel-indexes
