--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.38.1
+	patches.kernel.org/patch-2.6.38.1-2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -84,7 +85,6 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 +needs_update-33	patches.suse/sched-revert-latency-defaults
-	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
