- ALSA: hda - Fix pin-config of Gigabyte mobo (bnc#677256).

--- a/series.conf
+++ b/series.conf
@@ -572,6 +572,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889
+	patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo
 
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
 	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
