--- a/series.conf
+++ b/series.conf
@@ -573,6 +573,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889
 	patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo
+	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
 	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
