- Relax si_code check in rt_sigqueueinfo and rt_tgsigqueueinfo   (bnc#681826).

--- a/series.conf
+++ b/series.conf
@@ -85,6 +85,7 @@
 	patches.suse/hung_task_timeout-configurable-default
 +needs_update-33	patches.suse/sched-revert-latency-defaults
 	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing.patch
+	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing-fix.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
