--- a/series.conf
+++ b/series.conf
@@ -128,6 +128,7 @@
 +needs_update	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
 	patches.suse/x86-mark_rodata_rw.patch
+	patches.arch/x86-save-cr4-to-mmu_cr4_features-at-boot.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
