- Revert "x86: Cleanup highmap after brk is concluded"   (bnc#684248). - Delete   patches.arch/x86-save-cr4-to-mmu_cr4_features-at-boot.patch.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.38.1
 	patches.kernel.org/patch-2.6.38.1-2
+	patches.kernel.org/revert-x86-Cleanup-highmap-after-brk-is-concluded.patch
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -128,7 +129,6 @@
 +needs_update	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
 	patches.suse/x86-mark_rodata_rw.patch
-	patches.arch/x86-save-cr4-to-mmu_cr4_features-at-boot.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
