- Make selection of 'readdir-plus' adapt to usage patterns   (bnc#678123).

--- a/series.conf
+++ b/series.conf
@@ -438,6 +438,8 @@
 	patches.suse/SoN-fix
 	patches.suse/SoN-33-slab-leak-fix.patch
 
+	patches.fixes/nfs-adaptive-readdir-plus
+
 	########################################################
 	# Netfilter
 	########################################################
