- Update to 2.6.39-rc2.   - Eliminated 18 patches.   - Added 3 patches.     - hv_mouse: needs <linux/delay.h>.     - dm-raid45: Remove blk_unplug calls.     - novfs: 2.6.39 API update.   - Xen, Swap-over-NFS, and certain SCSI multipath features are disabled.   - patches.kernel.org is no longer used to contain upstream patches     for -rc releases. Users planning on building their own kernel should     have a copy of the tarball corresponding to the -rc releases.

--- a/series.conf
+++ b/series.conf
@@ -33,11 +33,8 @@
 	# Patches in patches.rpmify are applied to both -vanilla
 	# and patched flavors.
         ########################################################
-	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
-	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 	patches.rpmify/qla4xx-missing-readq-definition
-	patches.rpmify/winbond-needs-msleep
-	patches.rpmify/dw_spi-fix-PPC-build.patch
+	patches.rpmify/hv-mouse-build-fix
 
         ########################################################
         # kABI consistency patches
@@ -84,8 +81,6 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 +needs_update-33	patches.suse/sched-revert-latency-defaults
-	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing.patch
-	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing-fix.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
@@ -320,7 +315,7 @@
 	patches.suse/reiserfs-barrier-default
 	patches.fixes/reiserfs-remove-2-tb-file-size-limit
 	patches.fixes/reiserfs-force-inode-evictions-before-umount-to-avoid-crash
-	patches.suse/reiser4-dependencies
++needs_updating-39	patches.suse/reiser4-dependencies
 
 	########################################################
 	# dlm
@@ -364,6 +359,7 @@
 	patches.suse/novfs-2.6.37-api-changes
 	patches.fixes/novfs-fragment-size-fix.patch
 	patches.suse/novfs-build-fix
+	patches.suse/novfs-2.6.39-api-changes
 
 	########################################################
 	# other filesystem stuff: richacls
@@ -394,48 +390,53 @@
 	########################################################
 	# Swap-over-NFS
 	########################################################
-	patches.suse/SoN-01-mm-setup_per_zone_wmarks.patch
-	patches.suse/SoN-02-doc.patch
-	patches.suse/SoN-03-mm-gfp-to-alloc_flags-expose.patch
-	patches.suse/SoN-04-page_alloc-reserve.patch
-	patches.suse/SoN-05-reserve-slub.patch
-	patches.suse/SoN-06-mm-kmem_estimate_pages.patch
-	patches.suse/SoN-07-mm-PF_MEMALLOC-softirq.patch
-	patches.suse/SoN-08-mm-page_alloc-emerg.patch
-	patches.suse/SoN-08a-mm-page_alloc-emerg.patch
-	patches.suse/SoN-09-global-ALLOC_NO_WATERMARKS.patch
-	patches.suse/SoN-10-mm-page_alloc-GFP_EMERGENCY.patch
-	patches.suse/SoN-11-mm-reserve.patch
-	patches.suse/SoN-12-mm-selinux-emergency.patch
-	patches.suse/SoN-13-net-ps_rx.patch
-	patches.suse/SoN-14-net-sk_allocation.patch
-	patches.suse/SoN-15-netvm-reserve.patch
-	patches.suse/SoN-16-netvm-reserve-inet.patch
-	patches.suse/SoN-16a-netvm-reserve-inet.patch
-	patches.suse/SoN-17-netvm-reserve-inet.patch-fix
-	patches.suse/SoN-18-netvm-skbuff-reserve.patch
-	patches.suse/SoN-19-netvm-sk_filter.patch
-	patches.suse/SoN-20-netvm-tcp-deadlock.patch
-	patches.suse/SoN-21-emergency-nf_queue.patch
-	patches.suse/SoN-22-netvm.patch
-	patches.suse/SoN-23-mm-swapfile.patch
-	patches.suse/SoN-24-mm-page_file_methods.patch
-	patches.suse/SoN-25-nfs-swapcache.patch
-	patches.suse/SoN-25a-nfs-swapcache.patch
-	patches.suse/SoN-25b-nfs-swapcache.patch
-	patches.suse/SoN-26-nfs-swapper.patch
-	patches.suse/SoN-27-nfs-swap_ops.patch
-	patches.suse/SoN-27a-nfs-swap_ops.patch
-	patches.suse/SoN-28-nfs-alloc-recursions.patch
-	patches.suse/SoN-29-fix-swap_sync_page-race
-	patches.suse/SoN-30-fix-uninitialized-var.patch
-	patches.suse/SoN-31-fix-null-pointer-dereference
-	patches.suse/SoN-32-fix-kernel-bug-with-multiple-swapfiles
+
+	# Most of these just needed context adjustments but the
+	# swapfile patches need big updating due to ->sync_page
+	# going away -jeffm
+
++needs_update-39 patches.suse/SoN-01-mm-setup_per_zone_wmarks.patch
++needs_update-39 patches.suse/SoN-02-doc.patch
++needs_update-39 patches.suse/SoN-03-mm-gfp-to-alloc_flags-expose.patch
++needs_update-39 patches.suse/SoN-04-page_alloc-reserve.patch
++needs_update-39 patches.suse/SoN-05-reserve-slub.patch
++needs_update-39 patches.suse/SoN-06-mm-kmem_estimate_pages.patch
++needs_update-39 patches.suse/SoN-07-mm-PF_MEMALLOC-softirq.patch
++needs_update-39 patches.suse/SoN-08-mm-page_alloc-emerg.patch
++needs_update-39 patches.suse/SoN-08a-mm-page_alloc-emerg.patch
++needs_update-39 patches.suse/SoN-09-global-ALLOC_NO_WATERMARKS.patch
++needs_update-39 patches.suse/SoN-10-mm-page_alloc-GFP_EMERGENCY.patch
++needs_update-39 patches.suse/SoN-11-mm-reserve.patch
++needs_update-39 patches.suse/SoN-12-mm-selinux-emergency.patch
++needs_update-39 patches.suse/SoN-13-net-ps_rx.patch
++needs_update-39 patches.suse/SoN-14-net-sk_allocation.patch
++needs_update-39 patches.suse/SoN-15-netvm-reserve.patch
++needs_update-39 patches.suse/SoN-16-netvm-reserve-inet.patch
++needs_update-39 patches.suse/SoN-16a-netvm-reserve-inet.patch
++needs_update-39 patches.suse/SoN-17-netvm-reserve-inet.patch-fix
++needs_update-39 patches.suse/SoN-18-netvm-skbuff-reserve.patch
++needs_update-39 patches.suse/SoN-19-netvm-sk_filter.patch
++needs_update-39 patches.suse/SoN-20-netvm-tcp-deadlock.patch
++needs_update-39 patches.suse/SoN-21-emergency-nf_queue.patch
++needs_update-39 patches.suse/SoN-22-netvm.patch
++needs_update-39 patches.suse/SoN-23-mm-swapfile.patch
++needs_update-39 patches.suse/SoN-24-mm-page_file_methods.patch
++needs_update-39 patches.suse/SoN-25-nfs-swapcache.patch
++needs_update-39 patches.suse/SoN-25a-nfs-swapcache.patch
++needs_update-39 patches.suse/SoN-25b-nfs-swapcache.patch
++needs_update-39 patches.suse/SoN-26-nfs-swapper.patch
++needs_update-39 patches.suse/SoN-27-nfs-swap_ops.patch
++needs_update-39 patches.suse/SoN-27a-nfs-swap_ops.patch
++needs_update-39 patches.suse/SoN-28-nfs-alloc-recursions.patch
++needs_update-39 patches.suse/SoN-29-fix-swap_sync_page-race
++needs_update-39 patches.suse/SoN-30-fix-uninitialized-var.patch
++needs_update-39 patches.suse/SoN-31-fix-null-pointer-dereference
++needs_update-39 patches.suse/SoN-32-fix-kernel-bug-with-multiple-swapfiles
 
    # don't want to rediff SoN until this gets more testing 
-	patches.suse/slab-handle-memoryless-nodes-v2a.patch
-	patches.suse/SoN-fix
-	patches.suse/SoN-33-slab-leak-fix.patch
++needs_update-39	patches.suse/slab-handle-memoryless-nodes-v2a.patch
++needs_update-39	patches.suse/SoN-fix
++needs_update-39	patches.suse/SoN-33-slab-leak-fix.patch
 
 	patches.fixes/nfs-adaptive-readdir-plus
 
@@ -466,17 +467,15 @@
 	patches.fixes/scsi-inquiry-too-short-ratelimit
 	patches.suse/scsi-netlink-ml
 
-+needs_update	patches.drivers/mpt-fusion-4.22.00.00-update
 	patches.fixes/scsi-dh-queuedata-accessors
 	patches.fixes/scsi-dh-alua-retry-UA
-	patches.fixes/scsi-add-tgps-setting
++needs_update-39	patches.fixes/scsi-add-tgps-setting
 	patches.fixes/scsi-dh-alua-send-stpg
 	patches.fixes/scsi-dh-rdac-add-stk
 	patches.fixes/scsi-retry-alua-transition-in-progress
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/megaraid-mbox-fix-SG_IO
-+needs_update-35	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
@@ -545,7 +544,6 @@
 	########################################################
 	# USB
 	########################################################
-	patches.fixes/cdc-phonet-handle-empty-phonet-header.patch
 
 	########################################################
 	# I2C
@@ -568,13 +566,7 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889
-	patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
-
-	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
-	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
-	patches.drivers/sound-oss-opl3-validate-voice-and-channel-indexes
 
 	########################################################
 	# Other driver fixes
@@ -602,13 +594,13 @@
 	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
 	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
 	patches.suse/dm-raid45-api-update-no-barriers
+	patches.suse/dm-raid45-api-2.6.39
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
 +needs_update	patches.suse/dm-mpath-accept-failed-paths
 +needs_update	patches.suse/dm-mpath-detach-existing-hardware-handler
-	patches.suse/dm-mpath-null-pgs
 	patches.fixes/dm-table-switch-to-readonly
-	patches.suse/dm-mpath-evaluate-request-result-and-sense
++needs_update	patches.suse/dm-mpath-evaluate-request-result-and-sense
 	patches.fixes/dm-release-map_lock-before-set_disk_ro
 	patches.suse/dm-mpath-no-activate-for-offlined-paths
 	patches.suse/dm-mpath-no-partitions-feature
@@ -650,8 +642,6 @@
 	patches.suse/crasher-26.diff
 	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
-	patches.arch/x86_64-unwind-annotations
-	patches.arch/i386-unwind-annotations
 
         ########################################################
         # Kdump
@@ -688,7 +678,6 @@
 	# Staging tree patches
 	# new drivers that are going upstream
         ########################################################
-	patches.drivers/staging-samsung-laptop-add-support-for-lots-of-laptops.patch
 
 	########################################################
 	# "fastboot" patches
@@ -721,124 +710,124 @@
 # on top of them instead.  This reduces workload when
 # re-basing to a newer xen tree.
 #
-	### both uml framebuffer and xen need this one.
-	patches.xen/add-console-use-vt
-
-	# split out patches
-	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
-	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-+needs_update-33	patches.xen/sfc-driverlink
-+needs_update-33	patches.xen/sfc-resource-driver
-+needs_update-33	patches.xen/sfc-driverlink-conditional
-+needs_update-33	patches.xen/sfc-external-sram
-	patches.xen/tmem
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-+needs_update-33	patches.xen/sfc-set-arch
-+needs_update-33	patches.xen/sfc-endianness
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-seccomp-disable-tsc-option
-	patches.xen/xen3-x86-mcp51-no-dac
-	patches.xen/xen3-x86-mark_rodata_rw.patch
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-block-backends-cleanup
-	patches.xen/xen-blkback-bimodal-suse
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-use-after-free
-	patches.xen/xen-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-sections
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-sysdev-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-tmem-v1
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-floppy
-	patches.xen/xen-kzalloc
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-watchdog
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-msr-on-pcpu
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
++xen_needs_update	### both uml framebuffer and xen need this one.
++xen_needs_update	patches.xen/add-console-use-vt
++xen_needs_update
++xen_needs_update	# split out patches
++xen_needs_update	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
++xen_needs_update	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
++xen_needs_update	patches.xen/ipv6-no-autoconf
++xen_needs_update	patches.xen/pci-guestdev
++xen_needs_update	patches.xen/pci-reserve
++xen_needs_update+needs_update-33	patches.xen/sfc-driverlink
++xen_needs_update+needs_update-33	patches.xen/sfc-resource-driver
++xen_needs_update+needs_update-33	patches.xen/sfc-driverlink-conditional
++xen_needs_update+needs_update-33	patches.xen/sfc-external-sram
++xen_needs_update	patches.xen/tmem
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update	patches.xen/xen3-auto-blktap2-pvops.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update+needs_update-33	patches.xen/sfc-set-arch
++xen_needs_update+needs_update-33	patches.xen/sfc-endianness
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update	patches.xen/xen3-fixup-blktap2-pvops
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-patch-2.6.35
++xen_needs_update	patches.xen/xen3-patch-2.6.36
++xen_needs_update	patches.xen/xen3-patch-2.6.37
++xen_needs_update	patches.xen/xen3-patch-2.6.38
++xen_needs_update	patches.xen/xen3-seccomp-disable-tsc-option
++xen_needs_update	patches.xen/xen3-x86-mcp51-no-dac
++xen_needs_update	patches.xen/xen3-x86-mark_rodata_rw.patch
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-block-backends-cleanup
++xen_needs_update	patches.xen/xen-blkback-bimodal-suse
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blktap-modular
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-blktap2-use-after-free
++xen_needs_update	patches.xen/xen-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-kconfig-compat
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-sysdev-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-pcpu-hotplug
++xen_needs_update	patches.xen/xen-mem-hotplug
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-tmem-v1
++xen_needs_update	patches.xen/xen-cxgb3
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-floppy
++xen_needs_update	patches.xen/xen-kzalloc
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-setup-gsi
++xen_needs_update	patches.xen/xen-watchdog
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86-msr-on-pcpu
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/xen-x86_64-unmapped-initrd
