--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
         ########################################################
 	patches.rpmify/qla4xx-missing-readq-definition
 	patches.rpmify/hv-mouse-build-fix
+	patches.rpmify/olpc-add-linux-delay-h
 
         ########################################################
         # kABI consistency patches
