- gma500: Depend on X86.

--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
         ########################################################
 	patches.rpmify/qla4xx-missing-readq-definition
 	patches.rpmify/olpc-add-linux-delay-h
+	patches.rpmify/gma500-depend-on-x86
 
         ########################################################
         # kABI consistency patches
