- rts_pstor: use #ifdef instead of #if.

--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.rpmify/qla4xx-missing-readq-definition
 	patches.rpmify/olpc-add-linux-delay-h
 	patches.rpmify/gma500-depend-on-x86
+	patches.rpmify/rts_pstor-use-ifdef-instead-of-if
 
         ########################################################
         # kABI consistency patches
