- rts_pstor: Add <linux/vmalloc.h>.

--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.rpmify/olpc-add-linux-delay-h
 	patches.rpmify/gma500-depend-on-x86
 	patches.rpmify/rts_pstor-use-ifdef-instead-of-if
+	patches.rpmify/rts_pstor-add-linux-vmalloc-h
 
         ########################################################
         # kABI consistency patches
