- kvm: Fix off by one in kvm_for_each_vcpu iteration.

--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.rpmify/gma500-depend-on-x86
 	patches.rpmify/rts_pstor-use-ifdef-instead-of-if
 	patches.rpmify/rts_pstor-add-linux-vmalloc-h
+	patches.rpmify/kvm-fix-off-by-one-in-kvm_for_each_vcpu-iteration
 
         ########################################################
         # kABI consistency patches
