--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.rpmify/rts_pstor-use-ifdef-instead-of-if
 	patches.rpmify/rts_pstor-add-linux-vmalloc-h
 	patches.rpmify/kvm-fix-off-by-one-in-kvm_for_each_vcpu-iteration
+	patches.rpmify/fhandle-add-linux-personality-h-for-ia64
 
         ########################################################
         # kABI consistency patches
