- mpc5xxx_can: Fix typo causing build failure (of_dev -> ofdev).

--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,7 @@
 	patches.rpmify/kvm-fix-off-by-one-in-kvm_for_each_vcpu-iteration
 	patches.rpmify/fhandle-add-linux-personality-h-for-ia64
 	patches.rpmify/ft1000-remove-unnecessary-export_symbols
+	patches.rpmify/mpc5xxx_can-fix-typo-causing-build-failure-of_dev-ofdev
 
         ########################################################
         # kABI consistency patches
