- ft1000: Remove unnecessary EXPORT_SYMBOLs.

--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.rpmify/rts_pstor-add-linux-vmalloc-h
 	patches.rpmify/kvm-fix-off-by-one-in-kvm_for_each_vcpu-iteration
 	patches.rpmify/fhandle-add-linux-personality-h-for-ia64
+	patches.rpmify/ft1000-remove-unnecessary-export_symbols
 
         ########################################################
         # kABI consistency patches
