- drivers/leds/leds-lp5523.c: world-writable engine* sysfs files   (bnc#673934).

--- a/series.conf
+++ b/series.conf
@@ -227,6 +227,7 @@
 	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root
 	patches.fixes/mfd-ab8500-world-writable-debugfs-register-files
 	patches.fixes/drivers-leds-leds-lp5521-c-world-writable-sysfs-engine-files
+	patches.fixes/drivers-leds-leds-lp5523-c-world-writable-engine-sysfs-files
 
 	########################################################
 	#
