- scsi: aic94xx: world-writable sysfs update_bios file.

--- a/series.conf
+++ b/series.conf
@@ -184,6 +184,8 @@
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
 
+	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
+
 	########################################################
 	#
 	# ACPI patches
