--- a/series.conf
+++ b/series.conf
@@ -224,6 +224,7 @@
 	patches.fixes/mfd-ab3100-world-writable-debugfs-_priv-files
 	patches.fixes/drivers-misc-ep93xx_pwm-c-world-writable-sysfs-files
 	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files
+	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root
 
 	########################################################
 	#
