- mfd: ab3500: world-writable debugfs register-* files   (bnc#673934).

--- a/series.conf
+++ b/series.conf
@@ -223,6 +223,7 @@
 	patches.fixes/ubifs-restrict-world-writable-debugfs-files
 	patches.fixes/mfd-ab3100-world-writable-debugfs-_priv-files
 	patches.fixes/drivers-misc-ep93xx_pwm-c-world-writable-sysfs-files
+	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files
 
 	########################################################
 	#
