- mfd: ab8500: world-writable debugfs register-* files   (bnc#673934).

--- a/series.conf
+++ b/series.conf
@@ -225,6 +225,7 @@
 	patches.fixes/drivers-misc-ep93xx_pwm-c-world-writable-sysfs-files
 	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files
 	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root
+	patches.fixes/mfd-ab8500-world-writable-debugfs-register-files
 
 	########################################################
 	#
