--- a/series.conf
+++ b/series.conf
@@ -220,6 +220,7 @@
 	patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files
 	patches.fixes/drivers-rtc-rtc-ds1511-c-world-writable-sysfs-nvram-file
 	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
+	patches.fixes/ubifs-restrict-world-writable-debugfs-files
 
 	########################################################
 	#
