--- a/series.conf
+++ b/series.conf
@@ -218,6 +218,7 @@
 	patches.suse/kbd-ignore-gfx.patch
 
 	patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files
+	patches.fixes/drivers-rtc-rtc-ds1511-c-world-writable-sysfs-nvram-file
 
 	########################################################
 	#
