--- a/series.conf
+++ b/series.conf
@@ -226,6 +226,7 @@
 	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files
 	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root
 	patches.fixes/mfd-ab8500-world-writable-debugfs-register-files
+	patches.fixes/drivers-leds-leds-lp5521-c-world-writable-sysfs-engine-files
 
 	########################################################
 	#
