- mfd: ab3100: world-writable debugfs *_priv files (bnc#673934).

--- a/series.conf
+++ b/series.conf
@@ -221,6 +221,7 @@
 	patches.fixes/drivers-rtc-rtc-ds1511-c-world-writable-sysfs-nvram-file
 	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
 	patches.fixes/ubifs-restrict-world-writable-debugfs-files
+	patches.fixes/mfd-ab3100-world-writable-debugfs-_priv-files
 
 	########################################################
 	#
