- video: sn9c102: world-wirtable sysfs files (bnc#673934).

--- a/series.conf
+++ b/series.conf
@@ -217,6 +217,8 @@
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
 
+	patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files
+
 	########################################################
 	#
 	# ACPI patches
