- Linux 2.6.38.3.   - lots of security updates and bugfixes   - obsoletes:   	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889. 	patches.drivers/sound-oss-opl3-validate-voice-and-channel-indexes. 	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks. 	patches.fixes/drivers-leds-leds-lp5521-c-world-writable-sysfs-engine-files. 	patches.fixes/drivers-leds-leds-lp5523-c-world-writable-engine-sysfs-files. 	patches.fixes/drivers-misc-ep93xx_pwm-c-world-writable-sysfs-files. 	patches.fixes/drivers-rtc-rtc-ds1511-c-world-writable-sysfs-nvram-file. 	patches.fixes/irda-validate-peer-name-and-attribute-lengths. 	patches.fixes/mfd-ab3100-world-writable-debugfs-_priv-files. 	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files. 	patches.fixes/mfd-ab8500-world-writable-debugfs-register-files. 	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing-fix.patch. 	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root. 	patches.kernel.org/revert-x86-Cleanup-highmap-after-brk-is-concluded.patch.

--- a/series.conf
+++ b/series.conf
@@ -29,7 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.38.1
 	patches.kernel.org/patch-2.6.38.1-2
-	patches.kernel.org/revert-x86-Cleanup-highmap-after-brk-is-concluded.patch
+	patches.kernel.org/patch-2.6.38.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -86,7 +86,6 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 +needs_update-33	patches.suse/sched-revert-latency-defaults
-	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing-fix.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
@@ -219,16 +218,8 @@
 	patches.suse/kbd-ignore-gfx.patch
 
 	patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files
-	patches.fixes/drivers-rtc-rtc-ds1511-c-world-writable-sysfs-nvram-file
 	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
 	patches.fixes/ubifs-restrict-world-writable-debugfs-files
-	patches.fixes/mfd-ab3100-world-writable-debugfs-_priv-files
-	patches.fixes/drivers-misc-ep93xx_pwm-c-world-writable-sysfs-files
-	patches.fixes/mfd-ab3500-world-writable-debugfs-register-files
-	patches.fixes/scsi-scsi_transport_iscsi-make-priv_sess-file-writeable-only-by-root
-	patches.fixes/mfd-ab8500-world-writable-debugfs-register-files
-	patches.fixes/drivers-leds-leds-lp5521-c-world-writable-sysfs-engine-files
-	patches.fixes/drivers-leds-leds-lp5523-c-world-writable-engine-sysfs-files
 
 	########################################################
 	#
@@ -298,7 +289,6 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
-	patches.fixes/irda-validate-peer-name-and-attribute-lengths
 
 	########################################################
 	# NFS
@@ -583,13 +573,10 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-0017-Fix-SPDIF-out-regression-on-ALC889
 	patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
-	patches.drivers/sound-oss-remove-offset-from-load_patch-callbacks
-	patches.drivers/sound-oss-opl3-validate-voice-and-channel-indexes
 
 	########################################################
 	# Other driver fixes
