--- a/series.conf
+++ b/series.conf
@@ -649,6 +649,7 @@
 	patches.suse/crasher-26.diff
 	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
+	patches.arch/x86_64-unwind-annotations
 
         ########################################################
         # Kdump
