--- a/series.conf
+++ b/series.conf
@@ -271,6 +271,8 @@
 ## cpuidle perf events cleanups and related
 	patches.arch/perf_timechart_fix_zero_timestamps.patch
 
+	patches.fixes/intel_idle_lapic_param.patch
+
 	########################################################
 	# AGP, graphics related stuff
 	########################################################
