- Combined and consolidated bootsplash patch (bnc#669777,   bnc#570082, bnc#595657, bnc#594209, bnc#544645).   - Delete patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch.   - Delete patches.suse/bootsplash.   - Delete patches.suse/bootsplash-console-fix.   - Delete patches.suse/bootsplash-keep-multiple-data.   - Delete patches.suse/bootsplash-scaler.   - Reformatted code, fixed some minor bugs that became obvious.   - Fixed race that led to null pointer dereference in splash_read_proc():     bnc#669777.

--- a/series.conf
+++ b/series.conf
@@ -564,11 +564,7 @@
 	########################################################
 	# Input & Console
 	########################################################
-	patches.suse/bootsplash
-	patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch
-	patches.suse/bootsplash-keep-multiple-data
-	patches.suse/bootsplash-scaler
-	patches.suse/bootsplash-console-fix
+	patches.suse/SUSE-bootsplash
 	patches.drivers/elousb.patch
 	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
