- libata: DVR-216D can't do SETXFER DVD-RW DVR-216D (bnc#679143).

--- a/series.conf
+++ b/series.conf
@@ -474,6 +474,7 @@
 
 	# libata
 	patches.drivers/libata-unlock-hpa-by-default
+	patches.fixes/libata-dvr-216d-can-t-do-setxfer-dvd-rw-dvr-216d
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
