- ext4: mark multi-page IO complete on mapping failure   (bnc#679898).

--- a/series.conf
+++ b/series.conf
@@ -313,6 +313,7 @@
 	########################################################
 	# ext4
 	########################################################
+	patches.fixes/ext4-mark-multi-page-IO-complete-on-mapping-failure.patch
 
 	########################################################
 	# btrfs
