- ext4: fix ext4_da_block_invalidatepages() to handle page range   properly (bnc#679898).

--- a/series.conf
+++ b/series.conf
@@ -314,6 +314,7 @@
 	# ext4
 	########################################################
 	patches.fixes/ext4-mark-multi-page-IO-complete-on-mapping-failure.patch
+	patches.fixes/ext4-fix-ext4_da_block_invalidatepages-to-handle-pag.patch
 
 	########################################################
 	# btrfs
